--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -19,7 +19,7 @@
     <form [formGroup]="formGroup" class="login-form pt-h">
 
       <!-- Email -->
-      <mat-form-field class="mb-q" appearance="outline">
+      <mat-form-field class="mb-q" [appearance]="'inputAppearance' | settingValue">
         <mat-label>{{'EMAIL' | translate}}</mat-label>
         <input matInput type="text" required formControlName="email">
         <button mat-button *ngIf="formGroup.controls['email'].value" matSuffix mat-icon-button
@@ -34,7 +34,7 @@
       <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="10px">
 
         <!-- Password -->
-        <mat-form-field class="mb-h" appearance="outline">
+        <mat-form-field class="mb-h" [appearance]="'inputAppearance' | settingValue">
           <mat-label>{{'PASSWORD' | translate}}</mat-label>
           <input matInput type="{{passwordType}}" required formControlName="password">
           <button mat-button *ngIf="formGroup.controls['password'].value" matSuffix mat-icon-button
@@ -49,7 +49,7 @@
         </mat-form-field>
 
         <!-- Confirm password -->
-        <mat-form-field class="mb-h" *ngIf="!login" appearance="outline">
+        <mat-form-field class="mb-h" *ngIf="!login" [appearance]="'inputAppearance' | settingValue">
           <mat-label>{{'CONFIRM_PASSWORD' | translate}}</mat-label>
           <input matInput type="{{passwordType}}" required formControlName="confirmPassword">
           <button mat-button *ngIf="formGroup.controls['confirmPassword'].value" matSuffix mat-icon-button
