--- a/src/app/classroom/components/subject-creation/subject-creation.component.html
+++ b/src/app/classroom/components/subject-creation/subject-creation.component.html
@@ -18,7 +18,7 @@
     <div class="f-wrap" fxLayout="column">
 
       <!-- Name -->
-      <mat-form-field appearance="outline" fxFlex="100">
+      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="100">
         <mat-label>{{'FORM.SUBJECTS_NAME' | translate}}
         </mat-label>
         <input matInput required formControlName="nameCtrl" attr.aria-label="{{'FORM.SUBJECTS_NAME' | translate}}" autocomplete="off">
