--- a/src/app/shared/components/day-creation/day-creation.component.html
+++ b/src/app/shared/components/day-creation/day-creation.component.html
@@ -23,7 +23,7 @@
         </a13-select-student>
 
         <!-- Date -->
-        <mat-form-field class="mb-h" ngClass.xs="mb-1" appearance="outline" fxFlex="50">
+        <mat-form-field class="mb-h" ngClass.xs="mb-1" [appearance]="'inputAppearance' | settingValue" fxFlex="50">
           <mat-label>{{'FORM.DATE' | translate}}</mat-label>
           <input class="pl-h" matInput required formControlName="dayDateCtrl" [matDatepicker]="dp">
           <mat-datepicker #dp></mat-datepicker>
@@ -33,7 +33,7 @@
         </mat-form-field>
 
         <!-- Title -->
-        <mat-form-field appearance="outline" fxFlex="100">
+        <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="100">
           <mat-label>{{'FORM.TITLE' | translate}}</mat-label>
           <input matInput #title required formControlName="dayTitleCtrl" attr.aria-label="{{'FORM.TITLE' | translate}}" maxlength="{{maxlengthTitle}}" autocomplete="off">
           <fa-icon matPrefix class="mat-icon-20 mat-hint pr-1" icon="font"></fa-icon>
