--- a/src/app/shared/components/student-filters/student-filters.component.html
+++ b/src/app/shared/components/student-filters/student-filters.component.html
@@ -3,7 +3,7 @@
 
     <!-- Filter -->
     <div fxLayout="row" fxLayoutAlign="space-between center">
-      <mat-form-field appearance="outline">
+      <mat-form-field [appearance]="'inputAppearance' | settingValue">
         <mat-label>{{'SEARCH_STUDENT' | translate}}</mat-label>
         <input id="searchInputFilter" matInput [(ngModel)]="studentFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_STUDENT' | translate}}" autofocus autocomplete="off">
         <fa-icon *ngIf="!studentFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
@@ -20,7 +20,7 @@
     <div class="selects" fxLayout="row" fxLayoutAlign="space-between center">
 
       <!-- Classroom -->
-      <mat-form-field appearance="outline" fxFlex="49">
+      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="49">
         <mat-label>{{'CLASSROOMS' | translate}}</mat-label>
         <mat-select multiple [(ngModel)]="classroomsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'CLASSROOMS' | translate}}">
           <mat-option *ngFor="let classroom of classroomList" [value]="classroom.id">
@@ -31,7 +31,7 @@
       </mat-form-field>
 
       <!-- Subjects -->
-      <mat-form-field appearance="outline" fxFlex="49">
+      <mat-form-field [appearance]="'inputAppearance' | settingValue" fxFlex="49">
         <mat-label>{{'FORM.SUBJECTS' | translate}}</mat-label>
         <mat-select multiple [(ngModel)]="subjectsFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'FORM.SUBJECTS' | translate}}">
           <mat-option *ngFor="let subject of subjectList" [value]="subject.id">
