--- a/src/app/shared/components/day-filters/day-filters.component.html
+++ b/src/app/shared/components/day-filters/day-filters.component.html
@@ -3,7 +3,7 @@
     <!-- Filter -->
     <mat-form-field [appearance]="'inputAppearance' | settingValue">
       <mat-label>{{'SEARCH_DAY' | translate}}</mat-label>
-      <input id="searchInputFilter" matInput [(ngModel)]="dayFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_DAY' | translate}}" autofocus autocomplete="off">
+      <input id="searchInputFilter" matInput [(ngModel)]="dayFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_DAY' | translate}}" autocomplete="off">
       <fa-icon *ngIf="!dayFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
       <button class="reset-button" mat-button matSuffix *ngIf="dayFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
         <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
