--- a/src/app/authentication/components/authentication/authentication.component.scss
+++ b/src/app/authentication/components/authentication/authentication.component.scss
@@ -1,16 +1,16 @@
-.login {
+.authentication {
   height: 100vh;
   background-image: url('/assets/images/cello.jpg');
   background-size: cover;
   background-position: center;
 }
 
-.login-background {
+.authentication-background {
   background-color: var(--light-theme-primary);
   position: fixed;
   width: 100%;
   height: 100vh;
-  opacity: 0.4;
+  opacity: .4;
 }
 
 .image-logo {
@@ -27,7 +27,7 @@
   }
 }
 
-.login-container {
+.authentication-container {
   width: 100%;
   z-index: 10;
   max-width: 500px;
@@ -37,23 +37,4 @@
   border-radius: 2px;
   transition: all .2s;
   opacity: .965;
-}
-
-mat-form-field {
-  width: 100%;
-  min-width: 100px;
-
-  button[mat-icon-button] {
-    position: relative;
-    top: -8px;
-
-    fa-icon {
-      top: 0;
-      margin-left: 0
-    }
-  }
-}
-
-.login-button {
-  height: 48px;
 }
