floating button improved

--- a/src/app/authentication/components/sign-up/sign-up.component.html
+++ b/src/app/authentication/components/sign-up/sign-up.component.html
@@ -47,9 +47,9 @@
   </div>
 </form>
 
-<!-- SignIn RS buttons -->
+<!-- SignUp RS buttons -->
 <div fxLayout="row" fxLayoutGap="1rem">
-  <button fxFlex="33" *ngFor="let social of signInSocialNetworks" mat-stroked-button (click)="signInWithSocial(social.id)" attr.arial-label="{{social.txt | translate}}">
+  <button fxFlex="33" *ngFor="let social of signInSocialNetworks" mat-stroked-button (click)="signUpWithSocial(social.id)" attr.arial-label="{{social.txt | translate}}">
     <img [src]="'/assets/svgs/social/' + social.icon + '.svg'" class="mat-icon-24" [alt]="'Logo ' + social.id">
   </button>
 </div>
