--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "scss/mixins";
 @import "scss/variables";
 @import "scss/theming";
+@import "scss/animations";
 @import "scss/typography";
 @import "scss/components";
 @import "scss/main";
