--- a/src/app/classroom/daily/components/day-list/day-list.component.html
+++ b/src/app/classroom/daily/components/day-list/day-list.component.html
@@ -15,12 +15,16 @@
     </div>
 
     <!-- Empty list -->
+    <h3 *ngIf="!dayList?.length" class="mt-3 txt-center mat-hint">{{'MSG.DAY_LIST_EMPTY' | translate}}
+    </h3>
+
+    <!-- Empty filtered list -->
     <h3 *ngIf="!dayListFiltered?.length" class="txt-5 mt-3 txt-center mat-hint">{{'MSG.NOTHING_MAN' | translate}}</h3>
 
-    <!-- List length > 0 -->
+    <!-- Filtered list length > 0 -->
     <h3 *ngIf="dayListFiltered?.length" class="mt-3 txt-center mat-hint">{{'MSG.NO_MORE_DAYS' | translate}}</h3>
 
     <!-- Floating button -->
-    <a13-floating-button text="DAY.ADD" icon="edit" [disabled]="!studentList?.length" (click)="createDay()"></a13-floating-button>
+    <a13-floating-button text="DAY.ADD" tooltip="DAY.ADD" [pulse]="studentList?.length && !dayList?.length" icon="edit" [disabled]="!studentList?.length" (click)="createDay()"></a13-floating-button>
   </div>
 </section>
