Mejorado filtro de archivos y bugs

--- a/src/app/authentication/components/forgot-password/forgot-password.component.html
+++ b/src/app/authentication/components/forgot-password/forgot-password.component.html
@@ -15,7 +15,7 @@
 
   <!-- Forgot button -->
   <div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center">
-    <button class="action-button" fxFlex="100" mat-flat-button color="warn" (click)="forgotPassword()" attr.arial-label="{{'SIGN.FORGOT'| translate}}">
+    <button class="sign-button" fxFlex="100" mat-flat-button color="warn" (click)="forgotPassword()" attr.arial-label="{{'SIGN.FORGOT'| translate}}">
       <div class="pt-H">{{'SIGN.FORGOT' | translate}}</div>
     </button>
   </div>
