--- a/src/app/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/authentication/components/sign-in/sign-in.component.html
@@ -28,7 +28,7 @@
 
   <!-- SignIn button -->
   <div class="mb-1" fxLayout="row" fxLayoutAlign="space-between center">
-    <button class="action-button" fxFlex="100" mat-flat-button color="accent" (click)="signInWithEmail()" attr.arial-label="{{'SIGN.IN'| translate}}">
+    <button class="sign-button" fxFlex="100" mat-flat-button color="accent" (click)="signInWithEmail()" attr.arial-label="{{'SIGN.IN'| translate}}">
       <div class="pt-H">{{'SIGN.IN' | translate}}</div>
     </button>
   </div>
