--- a/src/app/authentication/components/sign-up/sign-up.component.html
+++ b/src/app/authentication/components/sign-up/sign-up.component.html
@@ -41,7 +41,7 @@
 
   <!-- Sign Up button -->
   <div class="mb-1" action="row" fxLayoutAlign="space-between center">
-    <button class="action-button" fxFlex="100" mat-flat-button color="primary" (click)="signUpWithEmail()" attr.arial-label="{{'SIGN.UP'| translate}}">
+    <button class="sign-button" fxFlex="100" mat-flat-button color="primary" (click)="signUpWithEmail()" attr.arial-label="{{'SIGN.UP'| translate}}">
       <div class="pt-H">{{'SIGN.UP' | translate}}</div>
     </button>
   </div>
