--- a/src/app/classroom/components/header/header.component.html
+++ b/src/app/classroom/components/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="container-max sm relative" fxLayout="row" fxLayoutAlign="start center">
 
     <!-- Back button  -->
-    <button *ngIf="headerConfig?.back" class="mr-h menu-button" (click)="goBack()" mat-icon-button attr.aria-label="{{'BACK' | translate}}">
+    <button *ngIf="headerConfig?.back" class="mr-h menu-button action-button" (click)="goBack()" mat-icon-button attr.aria-label="{{'BACK' | translate}}">
       <fa-icon class="mat-icon-18" icon="arrow-left"></fa-icon>
     </button>
 
@@ -18,12 +18,12 @@
     <span fxFlex></span>
 
     <!-- Seach button -->
-    <button *ngIf="headerConfig?.search" class="menu-button mr-q" mat-icon-button (click)="toggleSearch()" attr.aria-label="{{'SEARCH' | translate}}">
+    <button *ngIf="headerConfig?.search" class="menu-button action-button mr-q" mat-icon-button (click)="toggleSearch()" attr.aria-label="{{'SEARCH' | translate}}">
       <fa-icon class="mat-icon-18" [icon]="headerService?.searchStatus ? 'times' : 'filter'"></fa-icon>
     </button>
 
     <!-- Menu phone -->
-    <button *ngIf="headerConfig?.student?.contactInformation?.phones?.length" class="menu-button" mat-icon-button [matMenuTriggerFor]="menuPhones" attr.aria-label="{{'PHONE_MENU' | translate}}">
+    <button *ngIf="headerConfig?.student?.contactInformation?.phones?.length" class="menu-button action-button" mat-icon-button [matMenuTriggerFor]="menuPhones" attr.aria-label="{{'PHONE_MENU' | translate}}">
       <fa-icon class="mat-icon-18" icon="phone-alt"></fa-icon>
     </button>
     <mat-menu #menuPhones="matMenu">
@@ -36,7 +36,7 @@
     </mat-menu>
 
     <!-- Menu options-->
-    <button *ngIf="headerConfig?.menuOptions?.length" class=" mr-0 menu-button" mat-icon-button [matMenuTriggerFor]="menuOptions" attr.aria-label="{{'OPTION_MENU' | translate}}">
+    <button *ngIf="headerConfig?.menuOptions?.length" class=" mr-0 menu-button action-button" mat-icon-button [matMenuTriggerFor]="menuOptions" attr.aria-label="{{'OPTION_MENU' | translate}}">
       <fa-icon class="mat-icon-18" icon="ellipsis-v"></fa-icon>
     </button>
     <mat-menu #menuOptions="matMenu">
@@ -47,7 +47,7 @@
     </mat-menu>
 
     <!-- Sign Out -->
-    <button *ngIf="headerConfig?.signOut" class="menu-button mr-q" mat-icon-button (click)="logOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
+    <button *ngIf="headerConfig?.signOut" class="menu-button action-button mr-q" mat-icon-button (click)="logOut()" attr.aria-label="{{'SIGN.OUT' | translate}}">
       <fa-icon class="mat-icon-18" icon="sign-out-alt"></fa-icon>
     </button>
 
