--- a/src/app/classroom/students/components/student-card/student-card.component.html
+++ b/src/app/classroom/students/components/student-card/student-card.component.html
@@ -21,15 +21,15 @@
     </div>
 
     <!-- Action button -->
-    <div class="action-buttons" fxFlex="nogrow" fxLayout="row" fxLayoutAlign="space-between center">
+    <div fxFlex="nogrow" fxLayout="row" fxLayoutAlign="space-between center">
 
-      <!-- Fav button -->
-      <button mat-icon-button (click)="editStudent($event)">
+      <!-- Edit button -->
+      <button class="action-button" mat-icon-button (click)="editStudent($event)">
         <fa-icon class="mat-icon-18 mat-hint" icon="pen"></fa-icon>
       </button>
 
       <!-- Fav button -->
-      <button mat-icon-button (click)="fav($event)">
+      <button class="action-button" mat-icon-button (click)="fav($event)">
         <fa-icon [ngClass]="{'star-active': student?.favorite}" class="mat-icon-18 mat-hint" icon="star"></fa-icon>
       </button>
     </div>
