--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -40,6 +40,7 @@ $colors: (
     info-color          : #5faef7,
     warning-color       : #f7ba5f,
     error-color         : #f75f5f,
+    input-color         : rgba(34, 34, 34, 0.04)
   )
 );
 
