--- a/src/app/classroom/components/footer-toolbar/footer-toolbar.component.html
+++ b/src/app/classroom/components/footer-toolbar/footer-toolbar.component.html
@@ -1,18 +1,16 @@
 <mat-toolbar class="footer-toolbar shadow-top">
-	<div class="container-max sm" fxLayout="row" fxLayoutAlign="space-around center">
+  <div class="container-max sm" fxLayout="row" fxLayoutAlign="space-around center">
 
-		<!-- Items -->
-		<ng-container *ngFor="let item of toolbarItems">
-			<button class="menu-button" mat-icon-button [routerLink]="[ '/aula/' + item?.url ]"
-				attr.aria-label="{{item.name | translate}}" routerLinkActive="active">
-				<fa-icon class="mat-hint mat-icon-22" [icon]="item.icon"></fa-icon>
-			</button>
-		</ng-container>
+    <!-- Items -->
+    <ng-container *ngFor="let item of toolbarItems">
+      <button class="menu-button action-button" mat-icon-button [routerLink]="[ '/aula/' + item?.url ]" attr.aria-label="{{item?.name | translate}}" routerLinkActive="active" [matTooltip]="item?.name | translate" [matTooltipShowDelay]="650">
+        <fa-icon class="mat-hint mat-icon-22" [icon]="item.icon"></fa-icon>
+      </button>
+    </ng-container>
 
-		<!-- Side menu -->
-		<button class="menu-button" mat-icon-button (click)="toggleSinenav()"
-			attr.aria-label="{{'OPEN_CLOSE_MENU' | translate}}">
-			<fa-icon class="mat-hint mat-icon-22" icon="bars"></fa-icon>
-		</button>
-	</div>
+    <!-- Side menu -->
+    <button class="menu-button action-button" mat-icon-button (click)="toggleSinenav()" attr.aria-label="{{'OPEN_CLOSE_MENU' | translate}}" [matTooltip]="'OPEN_CLOSE_MENU' | translate" [matTooltipShowDelay]="650">
+      <fa-icon class="mat-hint mat-icon-22" icon="bars"></fa-icon>
+    </button>
+  </div>
 </mat-toolbar>
