--- a/src/app/shared/components/day-card/day-card.component.html
+++ b/src/app/shared/components/day-card/day-card.component.html
@@ -1,11 +1,14 @@
-<mat-card class="p-1 mt-h mb-h mat-elevation-z0 aumente" [ngClass]="{'archived-student': day?.student?.archived}" matRipple [routerLink]="[ '/aula/dia' , day?.id ]">
+<mat-card class="p-1 mt-h mb-h mat-elevation-z0 aumente" [ngClass]="{'archived-student': !day?.hideStudent && (day?.archived || day?.student?.archived) || (day?.hideStudent && day?.archived)}" matRipple [routerLink]="[ '/aula/dia' , day?.id ]">
   <div fxLayout="row" fxLayoutAlign="space-between start">
     <div class="mb-1" fxLayout="row" fxLayoutAlign="start center">
 
       <!-- Avatar -->
-      <a *ngIf="!day?.hideStudent && day?.student" [routerLink]="[ '/aula/alumno', day?.student?.id ]">
-        <img class="avatar avatar-xs p-0 mr-1 aumente aumente-big" [src]="day?.student?.personal?.avatar | srcImage" alt="Avatar">
-      </a>
+      <div *ngIf="!day?.hideStudent && day?.student" class="avatar-link" [ngClass]="{archived: day?.student?.archived}" fxLayout="row" fxLayoutAlign="start center" FxFlex="nogrow">
+        <a [routerLink]="[ '/aula/alumno', day?.student?.id ]">
+          <img class="avatar avatar-xs p-0 aumente aumente-big" [src]="day?.student?.personal?.avatar | srcImage" alt="Avatar">
+        </a>
+        <fa-icon *ngIf="day?.student?.archived" [ngClass]="{'error-color': day?.student?.archived}" class="mat-icon-18 mat-hint ml-q" icon="box"></fa-icon>
+      </div>
 
       <!-- Header info -->
       <div class="header-info" fxLayout="column" fxLayoutAlign="center">
@@ -17,8 +20,18 @@
     <!-- Spacer -->
     <span fxFlex></span>
 
-    <!-- Date -->
-    <span class="mat-small mat-hint text-date">{{day?.date | date: 'd MMM, yy'}}</span>
+    <div class="text-date-container" fxLayout="row" fxLayoutAlign="end center" fxFlex="nogrow">
+      <!-- Favorite -->
+      <button class="action-button small-button" mat-icon-button (click)="quickAction($event, 'favorite')">
+        <fa-icon [ngClass]="{'star-active': day?.favorite}" class="mat-icon-16 mat-hint" icon="star"></fa-icon>
+      </button>
+      <!-- Archived -->
+      <button class="action-button small-button ml-h" mat-icon-button (click)="quickAction($event, 'archived')">
+        <fa-icon [ngClass]="{'error-color': day?.archived}" class="mat-icon-16 mat-hint" icon="box"></fa-icon>
+      </button>
+      <!-- Date -->
+      <span class="mat-small mat-hint ml-h text-date">{{day?.date | date: 'd MMM, yy'}}</span>
+    </div>
   </div>
 
   <div fxLayout="row" fxLayoutAlign="space-between start">
@@ -30,10 +43,10 @@
 
     <!-- Action button -->
     <div class="action-buttons" fxFlex="nogrow" fxLayout="row" fxLayoutAlign="space-between center">
-      <button mat-icon-button (click)="editDay($event)">
+      <button class="action-button" mat-icon-button (click)="editDay($event)">
         <fa-icon class="mat-icon-18 mat-hint" icon="pen"></fa-icon>
       </button>
-      <button mat-icon-button (click)="deleteDay($event)">
+      <button class="action-button" mat-icon-button (click)="deleteDay($event)">
         <fa-icon class="mat-icon-18 mat-hint" icon="trash"></fa-icon>
       </button>
     </div>
