--- a/src/app/shared/components/day-filters/day-filters.component.html
+++ b/src/app/shared/components/day-filters/day-filters.component.html
@@ -1,14 +1,25 @@
 <div class="mb-1">
   <div *ngIf="headerService.searchStatus">
+
     <!-- Filter -->
-    <mat-form-field [appearance]="'inputAppearance' | settingValue">
-      <mat-label>{{'SEARCH_DAY' | translate}}</mat-label>
-      <input id="searchInputFilter" matInput [(ngModel)]="dayFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_DAY' | translate}}" autocomplete="off">
-      <fa-icon *ngIf="!dayFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
-      <button class="reset-button" mat-button matSuffix *ngIf="dayFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
-        <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
+    <div fxLayout="row" fxLayoutAlign="space-between center">
+      <mat-form-field [appearance]="'inputAppearance' | settingValue">
+        <mat-label>{{'SEARCH_DAY' | translate}}</mat-label>
+        <input id="searchInputFilter" matInput [(ngModel)]="dayFilter" (ngModelChange)="goToQuery()" attr.aria-label="{{'SEARCH_DAY' | translate}}" autocomplete="off">
+        <fa-icon *ngIf="!dayFilter" matSuffix class="mat-icon-20 mat-hint mr-h" icon="search"></fa-icon>
+        <button class="reset-button" mat-button matSuffix *ngIf="dayFilter" mat-icon-button attr.aria-label="{{'RESET_FILTER' | translate}}" (click)="resetFilter()">
+          <fa-icon class="mat-icon-20 mat-hint" icon="times"></fa-icon>
+        </button>
+      </mat-form-field>
+
+      <button class="reset-button ml-h mb-1" mat-button mat-icon-button attr.aria-label="{{'FORM.SHOW_FAVORITES' | translate}}" (click)="toggle('showFavorites')" [matTooltip]="'FORM.SHOW_FAVORITES' | translate" [matTooltipShowDelay]="650">
+        <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'star-active': showFavorites}" icon="star"></fa-icon>
       </button>
-    </mat-form-field>
+
+      <button *ngIf="!hideArchivedFilter" class="reset-button ml-h mb-1" mat-button mat-icon-button attr.aria-label="{{'FORM.SHOW_ARCHIVED' | translate}}" (click)="toggle('showArchived')" [matTooltip]="'FORM.SHOW_ARCHIVED' | translate" [matTooltipShowDelay]="650">
+        <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'archived': showArchived}" icon="box"></fa-icon>
+      </button>
+    </div>
 
     <!-- Dates -->
     <div class="dates-container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="8px">
@@ -49,23 +60,16 @@
           <fa-icon matPrefix class="mat-icon-20 mat-hint pr-h" icon="calendar"></fa-icon>
         </mat-form-field>
 
-        <button class="reset-button ml-h mb-1" mat-button mat-icon-button attr.aria-label="{{'SORT_ALPHABETICALLY' | translate}}" (click)="sort()">
+        <button class="reset-button ml-h mb-1" mat-button mat-icon-button attr.aria-label="{{'SORT_BY_DATE' | translate}}" (click)="sort()" [matTooltip]="'SORT_BY_DATE' | translate" [matTooltipShowDelay]="650">
           <fa-icon class="mat-icon-20 mat-hint" [ngClass]="{'color-primary': sortDirection}" [icon]="sortDirection ? 'sort-amount-down' : 'sort-amount-up-alt'"></fa-icon>
         </button>
       </div>
 
     </div>
-
-    <div *ngIf="!hideArchivedFilter" class="mt-h mb-2" fxLayout="row" fxLayoutAlign="end center">
-      <fa-icon class="mat-icon-20 mat-hint pr-1" icon="box" [ngClass]="{'archived': showArchived}"></fa-icon>
-      <mat-slide-toggle labelPosition="before" (change)="goToQuery()" [(ngModel)]="showArchived">
-        {{'FORM.SHOW_ARCHIVED' | translate}}
-      </mat-slide-toggle>
-    </div>
   </div>
 
   <!-- clean all filters -->
-  <div *ngIf="dayFilter || dateSince || dateUntil || showArchived || quickDate || sortDirection" fxLayout="row" fxLayoutAlign="space-between center">
+  <div *ngIf="dayFilter || dateSince || dateUntil || showArchived || showFavorites || quickDate || sortDirection" fxLayout="row" fxLayoutAlign="space-between center">
     <span fxFlex></span>
     <button mat-button color="warn" class="badge badge-fill warn mat-small pointer" (click)="cleanFilters()">
       {{'CLEAN_ALL_FILTERS' | translate}}
